--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,10 +39,13 @@ dependencies {
     compile 'com.mikhaellopez:circularimageview:3.0.2'
     compile 'com.github.oliveiradev:image-zoom:0.1.0'
     compile 'com.android.support:recyclerview-v7:24.1.1'
+    compile 'com.android.support:cardview-v7:24.1.1'
     compile 'com.squareup.retrofit:retrofit:2.0.0-beta1'
     compile 'com.squareup.retrofit:converter-gson:2.0.0-beta1'
     compile 'com.squareup.okhttp:okhttp:2.0.0'
     compile 'com.bignerdranch.android:expandablerecyclerview:1.0.3'
+    compile 'com.github.coyarzun89:fabtransitionactivity:0.2.0'
+    compile 'com.github.jonisaa:MaterialCalendarview:v1.2.2'
 }
 
 apply plugin: 'com.google.gms.google-services'
