--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,7 +47,8 @@ dependencies {
     compile 'com.github.coyarzun89:fabtransitionactivity:0.2.0'
     compile 'com.github.jonisaa:MaterialCalendarview:v1.2.2'
     compile 'com.caverock:androidsvg:1.2.1'
-
+    compile 'com.google.firebase:firebase-database:9.2.0'
+    compile 'com.google.firebase:firebase-storage:9.2.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
