--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,9 @@ dependencies {
     compile 'com.caverock:androidsvg:1.2.1'
     compile 'com.google.firebase:firebase-database:9.2.0'
     compile 'com.google.firebase:firebase-storage:9.2.0'
+    compile 'com.afollestad.material-dialogs:core:0.9.0.1'
+    compile 'com.github.rahatarmanahmed:circularprogressview:2.5.0'
+    compile 'de.hdodenhof:circleimageview:2.1.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
