--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,19 +27,19 @@ dependencies {
         transitive = true
     }
 
-    compile 'com.android.support:appcompat-v7:24.1.1'
+    compile 'com.android.support:appcompat-v7:24.2.0'
     compile 'com.google.firebase:firebase-auth:9.2.0'
-    compile 'com.android.support:design:24.1.1'
+    compile 'com.android.support:design:24.2.0'
     compile 'com.mikepenz:google-material-typeface:2.2.0.1@aar'
     compile 'com.mikepenz:fontawesome-typeface:4.4.0.1@aar'
-    compile 'com.android.support:support-v4:24.1.1'
+    compile 'com.android.support:support-v4:24.2.0'
     compile 'com.google.android.gms:play-services-auth:9.2.0'
     compile 'com.facebook.android:facebook-android-sdk:(4,5]'
     compile 'com.github.bumptech.glide:glide:3.5.2'
     compile 'com.mikhaellopez:circularimageview:3.0.2'
     compile 'com.github.oliveiradev:image-zoom:0.1.0'
-    compile 'com.android.support:recyclerview-v7:24.1.1'
-    compile 'com.android.support:cardview-v7:24.1.1'
+    compile 'com.android.support:recyclerview-v7:24.2.0'
+    compile 'com.android.support:cardview-v7:24.2.0'
     compile 'com.squareup.retrofit:retrofit:2.0.0-beta1'
     compile 'com.squareup.retrofit:converter-gson:2.0.0-beta1'
     compile 'com.squareup.okhttp:okhttp:2.0.0'
@@ -52,6 +52,7 @@ dependencies {
     compile 'com.afollestad.material-dialogs:core:0.9.0.1'
     compile 'com.github.rahatarmanahmed:circularprogressview:2.5.0'
     compile 'de.hdodenhof:circleimageview:2.1.0'
+    compile 'com.github.tuesda:CircleRefreshLayout:92a27db47d'
 }
 
 apply plugin: 'com.google.gms.google-services'
