--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,9 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
-        maven { url "https://jitpack.io" }
+        maven { url "https://jitpack.io"
+            }
+        maven { url "http://dl.bintray.com/glomadrian/maven" }
     }
 }
 
