--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
     <application
         android:name=".Classes.MyApplication"
         android:allowBackup="true"
-        android:icon="@drawable/icon_converted"
+        android:icon="@drawable/soccer_football_icon"
         android:label="@string/app_name"
         android:screenOrientation="portrait"
         android:supportsRtl="true"
